solve white space on top mainpage

--- a/frontend/src/components/ModalView/styles.scss
+++ b/frontend/src/components/ModalView/styles.scss
@@ -4,8 +4,8 @@ body{
 	margin: 0;
 }
 
-.ui.modal{
-	border-radius: 5vw;
+.ui.modals{
+	
 }
 
 .ui.label{
